# DaeguLibrary

./: .gitignore  README.md
dglib_api/: pom.xml
dglib_api/src/main/resources/: app-secret.properties  application.properties
dglib_chatbot/: README.md  pyproject.toml  꿈틀이 AI.bat
dglib_chatbot/chat_feedback_logs/dislike/: chat_log_2025-06-25.jsonl
dglib_chatbot/chat_feedback_logs/like/: chat_log_2025-06-25.jsonl
dglib_chatbot/chat_logs/: chat_log_2025-05-30.jsonl  chat_log_2025-06-12.jsonl  chat_log_2025-06-13.jsonl  chat_log_2025-06-16.jsonl  chat_log_2025-06-24.jsonl  chat_log_2025-06-25.jsonl  chat_log_2025-06-26.jsonl  chat_log_2025-06-27.jsonl  chat_log_2025-06-30.jsonl  chat_log_2025-07-02.jsonl  chat_log_2025-07-03.jsonl
dglib_chatbot/dglib_chatbot/: app.py  chatbotResponse.py  chatbot_response.py  config.py  nlp.py  response_prompt.py
dglib_chatbot/dglib_chatbot/model/: config.json
dglib_chatbot/dglib_chatbot/services/: chatbot_response.py  response_prompt.py
dglib_chatbot/dglib_chatbot/utils/: config.py
dglib_chatbot/speech_recognition/: tcp_service copy.py  tcp_service.py  tts_request.py  voice_detect.py
dglib_client/: index.html  package-lock.json  package.json  vite.config.js  클라이언트.bat
dglib_client/certs/: private.key
dglib_client/src/: App.css  App.jsx
dglib_client/src/api/: adminApi.jsx  bookApi copy.jsx  bookApi.jsx  chatbotApi.jsx  closedDayApi.jsx  config.js  eventApi.jsx  kakaoApi.js  loginApi.jsx  mailApi.jsx  memberApi.jsx  newsApi.jsx  noticeApi.jsx  placeApi.jsx  programApi.jsx  qnaApi.jsx  smsApi.jsx
dglib_client/src/atoms/: EbookState.js  chatState.js  loginState.js
dglib_client/src/hooks/: useAnswerMutation.js  useBoardListNumber.js  useBookMutation.js  useDateRangeHandler.js  useEbookMenu.js  useHighlight copy.js  useHighlight.js  useLogin.js  useMoveTo.js  usePage.jsx  usePageSaver.js  usePagination.jsx  useQnaMutation.js  useQuestionMutation.js  useQuillEditor.jsx  useSearchHandler.js  useSearchInput.jsx  useSelectHandler.js
dglib_client/src/layouts/: Chat.jsx  EBookFooter.jsx  EBookHeader.jsx  Footer.jsx  Header.jsx  LSide.jsx  Layout.jsx  Search.jsx  SubHeader.jsx
dglib_client/src/menus/: BoardMenu.jsx  DynamicTab.jsx  EbookContextMenu copy.jsx  EbookContextMenu.jsx  EbookHighlightMenu.jsx  EbookMenuWrapper.jsx  EbookNavMenu.jsx  EbookOptionMenu.jsx  GenreMenu.jsx  LoginMenu.jsx  MainMenu.jsx  RecoMenu.jsx  menuItems.jsx
dglib_client/src/pages/: AboutPage.jsx  AdminPage.jsx  BooksPage.jsx  BooksSearch copy.jsx  BooksSearch.jsx  CommunityPage.jsx  FindAccountPage.jsx  FindIdPage.jsx  InfoModPage.jsx  KakaoAccountPage.jsx  KakaoRedirectPage.jsx  LoginPage.jsx  LogoutPage.jsx  MainPage.jsx  MemberCardPage.jsx  MyLibraryPage.jsx  NonePage.jsx  ReservationPage.jsx  UsagePage.jsx
dglib_client/src/routers/: Loading.jsx  ProtectedRoute.jsx  adminRouter.jsx  booksRouter.jsx  communityRouter.jsx  genreRouter.jsx  myLibraryRouter.jsx  reservationRouter.jsx  root.jsx  signUpRouter.jsx  usageRouter.jsx
dglib_client/src/svg/: index.jsx
dglib_client/src/util/: AxiosClient.js  EbookUtils.js  axiosClient.js  commonUtil.js  cookieUtil.js  logoutHelper.js  tokenUtil.js
dglib_python/: pyproject.toml  readme.txt
dglib_python/dglib_python/: book_main.py  config.py
dglib_python/dglib_python/schedulers/: book_updater.py
dglib_python/dglib_python/services/: aladin.py  info_naru.py
dglib_python/dglib_python/utils/: http.py
dglib_vite_react_daehyung_test/src/api/: bookApi.jsx
dglib_vite_react_daehyung_test/src/components/: BookRegComponent.jsx  GenreComponent.jsx
report/: 간트차트.xlsx  기능, 정책 정의서.xlsx  대구도서관 홈페이지 구축_제안요청서.hwp
(+456 files in other folders)
